@@ -1,3 +1,10 @@
+Thu Aug 11 15:07:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (link_command): use LIBRUBYARG in rbconfig for
+	  unbundled extensions.  [ruby-core:38802] [Bug #5147]
+
+	* lib/mkmf.rb (init_mkmf): revert r32902.  [ruby-core:38903]
+
 Wed Aug 10 23:03:55 2011  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/lib/socket.rb: fix argument check in the previous commit.
